tests/snapshots/gql_snapshots__parse_where_or_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause:
  expression:
    BinaryOp:
      left:
        BinaryOp:
          left:
            Property:
              variable: n
              property: city
          op: Eq
          right:
            Literal:
              String: NYC
      op: Or
      right:
        BinaryOp:
          left:
            Property:
              variable: n
              property: city
          op: Eq
          right:
            Literal:
              String: LA
return_clause:
  distinct: false
  items:
    - expression:
        Variable: n
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
