tests/snapshots/gql_snapshots__parse_where_starts_with_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
where_clause:
  expression:
    BinaryOp:
      left:
        Property:
          variable: n
          property: name
      op: StartsWith
      right:
        Literal:
          String: A
return_clause:
  distinct: false
  items:
    - expression:
        Variable: n
      alias: ~
order_clause: ~
limit_clause: ~
